tests/paczka1/fuzzy1/74315293.err
Error in line 5: l2nX1l A270 71,7
Error in line 7: l2nX1l A628 40,2
Error in line 8: Eydr4 A628 0,4
Error in line 15: QOnWucQfcv A270 47,76
Error in line 12: A295 A270 10,4
Error in line 23: T7sH6GvkJ S165 98,5
Error in line 38: A295 A295 93,4
